--- a/settimeoutreact/src/App.css
+++ b/settimeoutreact/src/App.css
@@ -6,8 +6,8 @@
 
 .App {
   background-color: rgb(61, 61, 61);
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
 
   display: flex;
   justify-content: center;
@@ -32,7 +32,7 @@
     cursor: pointer;
   }
 
-  h2 {
+  .text {
     transition: background-color 300ms ease-in,
     opacity 500ms ease-in;
   }
@@ -44,3 +44,5 @@
   .incorrect {
     background-color: red;
   }
+
+  
